labs/1-install-ansible/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Admin Username": {
           "type": "string",
           "metadata": {
                "description": "Enter your username"
            }
        },
        "Admin Password": {
           "type": "securestring",
           "metadata": {
                "description": "Enter your password"
            }
        }
    },
    "variables": {
        "storageAccount": "[uniqueString('ansiblecs')]"
    },
    "resources": [
        {
            "name": "[variables('storageAccount')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "tags": {
                "app": "ansible",
                "env": "dev",
                "owner": "ops"
            },
            "properties": {
                "accountType": "Standard_LRS"
            }
        },
        {
            "name": "pip-dev-ansible",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "app": "ansible",
                "env": "dev",
                "owner": "ops"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[uniqueString('ansiblecs')]"
                }
            }
        },
        {
            "name": "vnet-dev-ansible",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "app": "ansible",
                "env": "dev",
                "owner": "ops"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "vnet-dev-ansible-Subnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            }
        },
        {
            "name": "nsg-dev-ansible",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "http",
                        "properties": {
                            "description": "allow web traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ssh",
                        "properties": {
                            "description": "allow ssh",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "nic-dev-ansible",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-dev-ansible')]",
                "[resourceId('Microsoft.Network/virtualNetworks', 'vnet-dev-ansible')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups','nsg-dev-ansible')]"
            ],
            "tags": {
                "app": "ansible",
                "env": "dev",
                "owner": "ops"
            },
            "properties": {
                "networkSecurityGroup":{
                    "id":"[resourceId('Microsoft.Network/networkSecurityGroups','nsg-dev-ansible')]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-dev-ansible')]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'vnet-dev-ansible', 'vnet-dev-ansible-Subnet')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "vm-dev-ansible",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2017-03-30",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', 'nic-dev-ansible')]"
            ],
            "tags": {
                "app": "ansible",
                "env": "dev",
                "owner": "ops"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS2_v2"
                },
                "osProfile": {
                    "computerName": "vm-dev-ansible",
                    "adminUsername": "[parameters('Admin Username')]",
                    "adminPassword": "[parameters('Admin Password')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "vm-dev-ansible-osdisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', 'nic-dev-ansible')]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {},
    "functions": []
}
